cmake_minimum_required (VERSION 2.6)
project (Oap)

add_subdirectory (ArnoldiPackage)
add_subdirectory (dist)
add_subdirectory (gdb)
add_subdirectory (oap2dt3d)
add_subdirectory (oap2dt3dDevice)
add_subdirectory (oap2dt3dDeviceTests)
add_subdirectory (oap2dt3dFuncTests)
add_subdirectory (oap2dt3dTests)
add_subdirectory (oap2dt3dUtils)
add_subdirectory (oapCuda)
add_subdirectory (oapCudaTests)
add_subdirectory (oapDeviceTests)
add_subdirectory (oapHostTests)
add_subdirectory (oapMath)
add_subdirectory (oapMatrix)
add_subdirectory (oapMatrixCpu)
add_subdirectory (oapMatrixCuda)
add_subdirectory (oapQRTestSamples)
add_subdirectory (oapTests)
add_subdirectory (oapUtils)
add_subdirectory (usr)
