cmake_minimum_required(VERSION 3.5)

project(oap CXX)

set_target_properties( PROPERTIES LINKER_LANGUAGE CXX) 
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

file(GLOB helloworld_SRC "*.h" "*.cpp")

add_executable(oap2dt3d ./oap2dt3d/*.cpp)
add_executable(oapArnoldiDeviceTests ./oapArnoldiDeviceTests/*.cpp)
add_executable(oapArnoldiHostTests ./oapArnoldiHostTests/*.cpp)
add_executable(oap2dt3dDeviceTests ./oap2dt3dDeviceTests/*.cpp)
add_executable(oapAppUtilsFuncTests ./oapAppUtilsFuncTests/*.cpp)
add_executable(oapCudaTests ./oapCudaTests/*.cpp)
add_executable(oapDeviceTests ./oapDeviceTests/*.cpp)
add_executable(oapNeuralDeviceTests ./oapNeuralDeviceTests/*.cpp)
add_executable(oapNeuralRoutinesHostTests ./oapNeuralRoutinesHostTests/*.cpp)

add_library(ArnoldiPackage SHARED ./ArnoldiPackage/*.cpp)
add_library(oap2dt3dDevice SHARED ./oap2dt3dDevice/*.cpp)
add_library(oapAppUtils SHARED ./oapAppUtils/*.cpp)
add_library(oapAppUtilsTests SHARED ./oapAppUtilsTests/*.cpp)
add_library(oapCMatrixDataTests SHARED ./oapCMatrixDataTests/*.cpp)
add_library(oapCuda SHARED ./oapCuda/*.cpp)
add_library(oapDeviceTestsData SHARED ./oapDeviceTestsData/*.cpp)
add_library(oapHostTests SHARED ./oapHostTests/*.cpp)
add_library(oapMath SHARED ./oapMath/*.cpp)
add_library(oapMatrix SHARED ./oapMatrix/*.cpp)
add_library(oapMatrixCpu SHARED ./oapMatrixCpu/*.cpp)
add_library(oapMatrixCuda SHARED ./oapMatrixCuda/*.cpp)
add_library(oapMemory SHARED ./oapMemory/*.cpp)
add_library(oapNeural SHARED ./oapNeural/*.cpp)
add_library(oapNeuralApps SHARED ./oapNeuralApps/*.cpp)
add_library(oapNeuralDevice SHARED ./oapNeuralDevice/*.cpp)
add_library(oapNeuralHost SHARED ./oapNeuralHost/*.cpp)
add_library(oapNeuralRoutines SHARED ./oapNeuralRoutines/*.cpp)
add_library(oapNeuralRoutinesHost SHARED ./oapNeuralRoutinesHost/*.cpp)
add_library(oapQRTestSamples SHARED ./oapQRTestSamples/*.cpp)
add_library(oapTests SHARED ./oapTests/*.cpp)
add_library(oapTestsData SHARED ./oapTestsData/*.cpp)
add_library(oapUtils SHARED ./oapUtils/*.cpp)

target_link_libraries(ArnoldiPackage PUBLIC oapMatrixCpu oapMatrixCuda oapMath oapUtils)
target_link_libraries(oap2dt3dDeviceTests PUBLIC oapAppUtils oap2dt3dDevice oapMatrixCuda)
target_link_libraries(oapAppUtilsFuncTests PUBLIC oapAppUtils oapMatrixCpu oapMatrix oapUtils)
target_link_libraries(oapAppUtilsTests PUBLIC oapAppUtils)
target_link_libraries(oapArnoldiDeviceTests PUBLIC oapUtils)
target_link_libraries(oapArnoldiHostTests PUBLIC oapUtils)
target_link_libraries(oapDeviceTests PUBLIC oapUtils oapNeuralDevice oapMatrixCuda)
target_link_libraries(oapHostTests PUBLIC oapUtils oapMatrixCpu)
target_link_libraries(oapNeuralDeviceTests PUBLIC oapUtils oapNeuralDevice oapNeuralRoutines)

include_directories(ArnoldiPackage oap2dt3dDevice oapAppUtils oapAppUtilsTests oapCMatrixDataTests oapCuda oapDeviceTestsData oapHostTests oapMath oapMatrix oapMatrixCpu oapMatrixCuda oapMemory oapNeural oapNeuralApps oapNeuralDevice oapNeuralHost oapNeuralRoutines oapNeuralRoutinesHost oapQRTestSamples oapTests oapTestsData oapUtils)
